Avoid page break inside sections

--- a/app/styles/droits-eligibles-list.css
+++ b/app/styles/droits-eligibles-list.css
@@ -58,3 +58,7 @@
         display: inline;
     }
 }
+
+.result {
+    page-break-inside: avoid;
+}
