--- a/app/styles/recap-situation.css
+++ b/app/styles/recap-situation.css
@@ -80,3 +80,8 @@
         display: none;
     }
 }
+
+.recap-situation
+{
+    page-break-inside: avoid;
+}
